--- a/proyek-akhir cuaca/package.json
+++ b/proyek-akhir cuaca/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clubfinder",
+  "name": "cuacaku",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,12 +7,13 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
-  "author": "Aria Fata",
+  "author": "C23-M4030",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.2",
