--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-  "rewrites": [
-    {
-      "source": "/(proyek-akhir cuaca)",
-      "destination": "/"
-    }
-  ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist"
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "app.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/dist/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
+  
